# RediSearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: index.html
frontend/static/: app.js  style.css
redisearch/: __init__.py
redisearch/api/: __init__.py  app.py  pagination.py  rate_limiter.py  schemas.py  server.py
redisearch/autocomplete/: __init__.py  builder.py  cli.py  suggester.py  trie.py
redisearch/config/: __init__.py  logging_config.py  settings.py
redisearch/crawler/: __init__.py  cli.py  crawler.py  http_client.py  json_crawler.py  parser.py  robots.py
redisearch/indexing/: __init__.py  bm25_builder.py  bm25_index.py  cli.py  shard_manager.py  tfidf_builder.py  tfidf_index.py  vector_builder.py  vector_index.py
redisearch/jobs/: __init__.py  scheduler.py  worker.py
redisearch/preprocessing/: __init__.py  cli.py  pipeline.py  service.py
redisearch/search/: __init__.py  bm25_searcher.py  cli.py  hybrid_scorer.py  shard_router.py  tfidf_searcher.py  vector_searcher.py
redisearch/storage/: __init__.py  connection.py  index_version_store.py  job_store.py  models.py  processed_store.py  raw_store.py  schema.py
tests/: conftest.py
tests/test_api/: test_endpoints.py  test_pagination.py  test_rate_limiter.py
tests/test_autocomplete/: __init__.py  test_builder.py  test_endpoints.py  test_placeholder.py  test_suggester.py
tests/test_crawler/: test_crawler.py  test_parser.py  test_robots.py
tests/test_indexing/: test_bm25_builder.py  test_bm25_index.py  test_shard_manager.py  test_shard_router.py  test_tfidf_index.py  (+1 more)
(+19 files in other folders)
